--- a/assets/src/promotion_carousel_page/components/carousel-page-button/styles.module.css
+++ b/assets/src/promotion_carousel_page/components/carousel-page-button/styles.module.css
@@ -1,4 +1,4 @@
-.gymnasium-wellingdorf-promotion-carousel-page-button {
+.button {
     color: var(--mdc-theme-on-background, #000);
     height: 36px;
     border-radius: var(--mdc-button-radius, 4px);
@@ -29,7 +29,7 @@
     backdrop-filter: blur(10px);
 }
 
-.gymnasium-wellingdorf-promotion-carousel-page-button-background {
+.buttonBackground {
     opacity: 0.65;
     left: 0;
     right: 0;
@@ -40,6 +40,6 @@
     background-color: var(--mdc-theme-background, #fff);
 }
 
-.gymnasium-wellingdorf-promotion-carousel-page-button-content {
+.buttonContent {
     z-index: 2;
 }
